--- a/Langchain-Tutorials/Langchain.ipynb
+++ b/Langchain-Tutorials/Langchain.ipynb
@@ -2,33 +2,6 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "T90XOZXF1Iw4"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "Huxg_MEe1JMc"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "21j8xnxq1JPA"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": 2,
       "metadata": {
         "colab": {
@@ -108,7 +81,7 @@
         }
       ],
       "source": [
-        "! pip install transformers huggingface_hub langchain"
+        "! pip install transformers huggingface_hub langchain sentence-transformers chromadb"
       ]
     },
     {
